--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,27 @@
     "content_scripts": [
         {
             "matches": [
-                "https://www.linkedin.com/*"
+                "https://www.linkedin.com/*",
+                "https://www.google.com/*"
             ],
             "js": [
                 "script.js"
             ],
             "css": [
                 "styles.css"
-            ]
+            ],
+            "all_frames": true
         }
     ],
+    "permissions": [
+        "activeTab",
+        "scripting",
+        "https://www.linkedin.com/*",
+        "https://www.google.com/*"
+    ],
+    "action": {
+        "default_popup": "popup.html"
+    },
     "icons": {
         "16": "/assets/images/icon_16.png",
         "32": "/assets/images/icon_32.png",
